# ultrasearch

./: .gitignore  AGENTS.md  COMPREHENSIVE_PLAN_TO_FIX_ALL_REMAINING_UI_UX_ISSUES_AND_FULLY_LEVERAGE_GPUI.md  Cargo.toml  IMPLEMENTATION_STATUS.md  MODERN_UX_PLAN.md  PLAN_TO_BUILD_RUST_WINDOWS_FILE_EXPLORER_TOOL.md  rust-toolchain.toml  update_beads.py
.beads/: .gitignore  beads.base.jsonl  beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: ADVANCED_FEATURES.md  EXTRACTOUS_GRAALVM.md  SERVICE_PRIVILEGE_MODEL.md
ultrasearch/crates/cli/: Cargo.toml
ultrasearch/crates/cli/src/: lib.rs  main.rs
ultrasearch/crates/content-extractor/: Cargo.toml  build.rs
ultrasearch/crates/content-extractor/src/: component_manager.rs  lib.rs
ultrasearch/crates/content-extractor/src/ifilter/: mod.rs
ultrasearch/crates/content-extractor/src/plugins/: registry.rs
ultrasearch/crates/content-index/src/: lib.rs  log_analysis.rs
ultrasearch/crates/core-serialization/src/: lib.rs  mmap.rs
ultrasearch/crates/core-types/: Cargo.toml
ultrasearch/crates/core-types/src/: lib.rs
ultrasearch/crates/core-types/src/config/: mod.rs
ultrasearch/crates/index-worker/: Cargo.toml
ultrasearch/crates/index-worker/src/: main.rs
ultrasearch/crates/ipc/: Cargo.toml
ultrasearch/crates/ipc/src/: framing.rs  lib.rs
ultrasearch/crates/ntfs-watcher/: Cargo.toml
ultrasearch/crates/service/: Cargo.toml
ultrasearch/crates/ui/: Cargo.toml
ultrasearch/docs/: CONFIG_REFERENCE.md  FEATURES.md
(+47 files in other folders)
