[package]
name = "core-types"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"
description = "Core identifiers and shared types for UltraSearch"

[dependencies]
serde = { workspace = true, features = ["derive"] }
bitflags = { workspace = true }
anyhow = { workspace = true }
once_cell = "1.19"
dotenvy = "0.15"
toml = { workspace = true }
